--- a/chi2012.tex
+++ b/chi2012.tex
@@ -23,6 +23,7 @@
 \usepackage{graphics} % for EPS, load graphicx instead
 \usepackage{times}    % comment if you want LaTeX's default font
 \usepackage{url}      % llt: nicely formatted URLs
+\usepackage{multirow} % multirow tables
 
 % llt: Define a global style for URLs, rather that the default one
 \makeatletter
@@ -113,7 +114,7 @@ In recent years, an unprecedented quantity and variety of information has been m
 
 We hypothesise that end-users would benefit from this rich data with tools allowing them to effectively browse, use and consume heterogeneous structured data from diverse sources.  In this paper, we present an investigation into extending PIM tools to effectively use emerging ecosystems of personal data.  We used a three-stage sequential exploratory mixed-method approach: first, we performed a qualitative analysis of a semi-structured interview pre-study to understand the types of tasks people performed using a plurality of  information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people preferred to rely upon multiple and diverse sources, then singular, integrated ones for a number of reasons, including coverage, reliability, and alternative perspectives.  
 
-Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: contacts, events, music, shopping (retail), social networking and weather, finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
+Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
 Third, we developed DataPalette at interface that uses the most common types of heterogeneity to enable serendipitous ``data mixing'' - a form of simple integration sufficient to allow people to easily and effectively combine and compare information sources without the need to write code.  It was principally designed based upon people's data integration needs and to support data heterogeneity observed in the previous studies.  We embarked on a user-centric design exercise towards an interface to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then performed a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we devised, and that this interface effectively improved people's ability to perform multifaceted decision making tasks using multiple sources.
 
@@ -194,13 +195,13 @@ weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML
 \hline
 \end{tabular}
 \caption{\emph{PS.2 Results} - Analysis of heterogeneity present across data feeds, by category of feed}\label{tbl:prestudy2}
-
 \end{table*}
 %% << 
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our investigation of integration challenges started with identifying a set of candidate data sources for analysis.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  In order to get a variety of different kinds of sources represented, we first categorised feeds into 5 topic categories: social networks (people), retail (shopping), events (calendar events, happenings, etc), music, and weather. We then populated each category with 2-5 feeds each depending on feed availability, for a total of 15 total feeds.  
-For each feed, 3-5 data records were obtained by randomly selecting product IDs by first querying for popular key terms for products in each category, which are listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type were obtained for each category; e.g., product records for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
+Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 15 total feeds for analysis.  
+
+For each feed, 3-5 representative data records were obtained; this was done either by finding record IDs by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query otherwise.  listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type were obtained for each category; e.g., product records for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
 
 The per-source metrics were as follows:
 \begin{itemize}
