--- a/chi2012.tex
+++ b/chi2012.tex
@@ -199,9 +199,9 @@ weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML
 %% << 
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 15 total feeds for analysis.  
+Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 20 total feeds for analysis.  
 
-For each feed, 3-5 representative data records were obtained; this was done either by finding record IDs by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query otherwise.  listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type were obtained for each category; e.g., product records for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
+For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, , this was user profiles, this was done either by finding record IDs by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query otherwise.  listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type were obtained for each category; e.g., product records for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
 
 The per-source metrics were as follows:
 \begin{itemize}
