--- a/chi2012.tex
+++ b/chi2012.tex
@@ -219,7 +219,11 @@ weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 20 total feeds for analysis.  
 
-For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, , this was user profiles, this was done either by finding record IDs by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query otherwise.  listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type were obtained for each category; e.g., product records for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
+For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  For each obtained data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  For determining the width, we first examined the record to find the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record has few attributes about the actual product compared to its ItemAttributes sub-property, which was used instead. Thus, all comparisons were made to maximize comparative similarity.  Depth was computed as average from root 
+
+In addition to the complexity metrics, we mapped out the amount of overlap among the sources in each category by first manually determiningr \emph{equivalent properties}.  This was done manually by creating a pairwise alignment table between every two data sources in each category.  Each row of the alignment table comprised a property in some schema, and all its closest matches in the other schemas.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions; two properties  were considered equivalent if they intended to model the same piece of information; 
+
+, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
 
 The per-source metrics were as follows:
 \begin{itemize}
@@ -304,7 +308,6 @@ To remain consistent with the drag-and-drop interactions used throughout the int
 By making such consolidation user-driven, we gave the user freedom to combine things when it suited him or her. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred to keep things separate.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
 \subsubsection{Enumerated-type value consolidation}
-
 Related to the concept of co-reference, PS.2 revealed that enumerated values of properties were often inconsistent, e.g. ``Casual dining'' vs ``Relaxed'' for a restaurant's ``atmosphere'' property. To reconcile and consolidate corresponding values from different  datasources, we extended the drag and drop support of co-reference combination to also allow users to drag and drop to combine enumerated literal values as well.  
 
 \subsubsection{``Do What I Mean'' Visualisation}
@@ -546,7 +549,7 @@ Properties are tricky. Sometimes you don’t care [which data source] a property
 
 Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the particiapnts successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were used, multi-path features were not as widely used, only by 4 participants. We believe that participants may not have realized that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
 
-Ascertaining DP's impact on task performance (h3) was the most difficult to ascertain, given the small sample size of our study and large number of factors influencing each person's performance.  While tasks were completed on average slightly faster than the control interface, these differences were not statistically significant.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that particiapnts justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP, which strongly suggests that DP made the task easier to complete.
+Assessing whether DP's improved task performance (h3) was the most difficult to ascertain, given the small sample size of our study and large number of factors influencing each person's performance.  While tasks were completed on average slightly faster than the control interface, these differences were not statistically significant.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that particiapnts justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP, which strongly suggests that DP made the task easier to complete.
 
 %% -> discussion and limitations
 \subsection{Design Limitations}
