--- a/chi2012.tex
+++ b/chi2012.tex
@@ -200,8 +200,7 @@ People said that they would like a website that could support the evolution of a
 
 \begin{table*}
 \small
-\begin{tabular}{| p{2.0cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} | p{1.8cm} |}
-\hline
+\begin{tabular}{p{2.0cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}}
 				& {\bf source}		& {\bf average props/record}	& {\bf average depth/record}	& {\bf equivalent to}	& {\bf prop name inconsistent}	& {\bf structural inconsistency} 	& {\bf model inconsistency} \\
 \hline
 social networking	& google+			& 12						& 1.52					& tw:5, li:4, fb:4		& tw:3, li:2, fb:2				& tw:0, li:1, fb:1				& tw:0, li:0, fb:0 \\
@@ -229,7 +228,6 @@ tracks)			& rdio			& 27						& 2						& sp: 7			& sp: 6					& sp: 1					& sp: 1 
 weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 5, y: 4				& wu: 0, y: 0 \\
 (forecasts)		& wundergound	& 52						& 1.38					& y:12			& y:12					& y:7						& y:3 \\
 				& yahoo weather	& 22						& 1.58					&				&						&						& \\
-\hline
 \end{tabular}
 \caption{\emph{PS.2 Results} - Analysis of heterogeneity present across data feeds, by category of feed}\label{tbl:prestudy2}
 \end{table*}
