--- a/chi2012.tex
+++ b/chi2012.tex
@@ -201,7 +201,8 @@ People said that they would like a website that could support the evolution of a
 \begin{table*}
 \small
 \begin{tabular}{p{2.0cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}}
-				& {\bf source}		& {\bf average props/record}	& {\bf average depth/record}	& {\bf equivalent to}	& {\bf prop name inconsistent}	& {\bf structural inconsistency} 	& {\bf model inconsistency} \\
+				&				& {\bf average}				& {\bf average }				& 				& {\bf prop name}			& {\bf structural} 			& {\bf model } \\
+				& {\bf source}		& {\bf props/record}			& {\bf depth/record}			& {\bf equivalent to}	& {\bf inconsistent}			& {\bf inconsistency} 			& {\bf inconsistency} \\
 \hline
 social networking	& google+			& 12						& 1.52					& tw:5, li:4, fb:4		& tw:3, li:2, fb:2				& tw:0, li:1, fb:1				& tw:0, li:0, fb:0 \\
 (profiles)			& twitter			& 39						& 1.37					& li:4, fb:4 			& li:2, fb:1					& li:0, fb:0					& li:0, fb:0 \\
