--- a/chi2012.tex
+++ b/chi2012.tex
@@ -200,8 +200,8 @@ People said that they would like a website that could support the evolution of a
 
 \begin{table*}
 \small
-\begin{tabular}{p{2.0cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}  p{1.8cm}}
-				& {\bf source}		& {\bf average props/record}	& {\bf average depth/record}	& {\bf equivalent to}	& {\bf prop name inconsistent}	& {\bf structural inconsistency} 	& {\bf model inconsistency} \\
+\begin{tabular}{p{2.0cm} p{1.8cm} p{1.8cm} p{1.8cm} p{1.8cm} p{1.8cm} p{1.8cm} p{1.8cm}}
+				& {\bf source}		& {\bf avg props/record}	& {\bf avg depth/record}	& {\bf equivalent props}	& {\bf prop name inconsistent}	& {\bf structural inconsistency} 	& {\bf model inconsistency} \\
 \hline
 social networking	& google+			& 12						& 1.52					& tw:5, li:4, fb:4		& tw:3, li:2, fb:2				& tw:0, li:1, fb:1				& tw:0, li:0, fb:0 \\
 (profiles)			& twitter			& 39						& 1.37					& li:4, fb:4 			& li:2, fb:1					& li:0, fb:0					& li:0, fb:0 \\
@@ -236,11 +236,11 @@ weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our investigation of integration challenges of available structured data feeds started with identifying a set of candidate sources to examine.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  To increase the variety of sources, we first categorised sources into 5 topic categories: social network services, retailers, event sources (e.g., online calendars and event sites) music, and weather, and selected 2-5 sources from each 2-5 feeds each for a total of 20 total feeds for analysis.  
 
-For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  For each obtained data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  For determining the width, we first examined the record to find the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record has few attributes about the actual product compared to its ItemAttributes sub-property, which was used instead. Thus, all comparisons were made to maximize comparative similarity.  Depth was computed as average from root 
+For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for music sites this was song info, etc.  Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  For each obtained data record, two simple complexity metrics were computed: an \emph{average width} and \emph{average depth} of record.  For determining the width, we first examined the record to find the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. Thus, all comparisons were made to maximize comparative similarity.  Depth was computed as the average number of levels from record root to leaves across all properties, and was measured, with width, to convey the overall size/complexity of each record.
 
-In addition to the complexity metrics, we mapped out the amount of overlap among the sources in each category by first manually determiningr \emph{equivalent properties}.  This was done manually by creating a pairwise alignment table between every two data sources in each category.  Each row of the alignment table comprised a property in some schema, and all its closest matches in the other schemas.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions; two properties  were considered equivalent if they intended to model the same piece of information; 
+The third metric measured the amount of overlap among the sources in each category.  This was done by determining \emph{equivalent properties} between schemas, which we did manually by creating an alignment table for all properties across all data sources in each category.  Each row of the alignment table comprised a property of a record from one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions; two properties were aligned if they seemed to model the same piece of information.
 
-, followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
+Once the equivalent properties were established, we look at how many of these properties were terminologically consistent, that is, identified using the same property name.  If the names were different, we scored these as , followed by pairwise heterogeneity metrics described below.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, many of the sites' schemas were not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. Thus we decided to use an instance document random sampling technique instead.
 
 The per-source metrics were as follows:
 \begin{itemize}
