--- a/chi2012.tex
+++ b/chi2012.tex
@@ -269,7 +269,7 @@ Our findings suggest that -- FILL ME IN HERE PLEASE,
 \begin{figure*}[tbp]
 \begin{center}
 \includegraphics[width=14cm]{img/screenshot}
-\caption{DataPalette Workspace, a file manager-inspired Drag and Drop interface for structured data mixing. Collapsable displays of data sources are listed on the left, from which instances or entire sets of items can be dragged to form a windoow (group) on the workspace.}
+\caption{DataPalette Workspace, a file manager-inspired Drag and Drop interface for structured data mixing. Collapsible displays of data sources are listed on the left, from which instances or entire sets of items can be dragged to form a windoow (group) on the workspace.}
 \label{fig:workspace}
 \end{center}
 \end{figure*}
@@ -338,7 +338,7 @@ To make it easier for people to quickly visually compare aspects of instances, w
 \subsubsection{Model-based brushing}
 Since it can get confusing having a single instance represented across several groups, we provided \emph{universal brushing} across the interface; hovering over any representation of any instance (an instance block, a map marker or a histogram bar), causes all other visible representations of that instance to lightly glow, so that the user can quickly identify all the places that a single instance is represented
 
-% Data sources were represented as collapsable panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
+% Data sources were represented as collapsible panels in a sidebar on the left of the workspace, from which instances or entire data sources could be ``pulled off'' onto the workspace.  Figure \ref{fig:workspace} displays the entire UI overview.
 
 %% it would be nice if we had space to summarize but i fear we don't
 
