--- a/chi2012.tex
+++ b/chi2012.tex
@@ -240,17 +240,16 @@ The third metric measured the amount of overlap among the sources in each catego
 
 Once the equivalent properties were established, we look at how many of these properties were terminologically inconsistent, that is, identified using different property names.   Then, ignoring property name, we looked to see if its values were structurally comparable.  If two fields were of the same data type and, if complex, had equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  An example of such a structural inconsistency were``birthday'' fields in Facebook and LinkedIn; Facebook represented it as a single string formatted ``MM/DD/YYYY'', while LinkedIn represented it as a sub-structure with separate ``Month'', ``Day'' and ``Year'' subfields.  
 
-Finally, we looked at fields that were equivalent, yet which could not be compared for reasons other than the terminological and structural reasons above.  These \emph{modeling differences} were caused by a variety of reasons including, but not limited to, the following: measurement unit inconsistencies, how data was measured (e.g., dewpoint vs relative humidity), differences in scale or granularity, and mismatches in what was being modeled (``offer'' versus ``listing'').
+Finally, we looked at fields that were equivalent, yet which could not be compared for reasons other than the terminological and structural reasons above.  These \emph{modelling differences} were caused by a variety of reasons including, but not limited to, the following: measurement unit inconsistencies, how data was measured (e.g., dewpoint vs relative humidity), differences in scale or granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').
 
 \subsubsection{Results}
-% TODO TODO TODO TODO 
-Our findings suggest that -- FILL ME IN HERE PLEASE, 
+Table \ref{tbl:prestudy2} displays the raw results of the process just described.  A number of features were quite striking about the data. First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest; in particular, amazon, soundcloud, Twitter and Weather Underground stood out in their respective categories. 
 
-<<<<<<< HEAD
-=======
+Looking at overlap, we notice that, except for the smallest records, there was little overlap among records; that is, most of the data records had a large number of unique properties unaccounted for in the others.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-speicifc IDs) others were useful properties one would expect to find in a record that were simply not present.  Only one of the music records, Spotify, included information about the album(s) that a song was featured on.  Such omissions show us that these data APIs reflect very specifically each service provider's capabilities and internal data representations, and that integrating data such records from multiple sources would allow properties to be aggregated to form more complete representations.
+
+The second thing we find is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case (comprising a majority of the cases) occurring  
+
 %\section{Designing the DataPalette Interface}
-
->>>>>>> 23a25c4ff51b80546dd7e336c24b59c561ae12e0
 \section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
 \begin{figure*}[tbp]
 \begin{center}
@@ -576,7 +575,7 @@ Supporting better structural heterogeneity:
    Splitting fields
    Rearranging fields (British dates American dates)
    
-Modeling heterogeneity (?)
+Modelling heterogeneity (?)
    Specificity  
      Education+Jobs vs ``Education'' + ``Jobs'' 
 
