--- a/chi2012.tex
+++ b/chi2012.tex
@@ -245,7 +245,7 @@ Finally, we looked at fields that were equivalent, yet which could not be compar
 \subsubsection{Results}
 Table \ref{tbl:prestudy2} displays the raw results of the process just described.  A number of features were quite striking about the data. First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest; in particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. 
 
-Looking at overlap, we notice that, there was, overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones that overlapped with any of the other records.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-speicifc IDs) others were useful properties one would expect to find in a record that were simply not present.  Only one of the music records, Spotify, included information about the album(s) that a song was featured on.  Such omissions show us that these data APIs reflect very specifically each service provider's capabilities and internal data representations, and that integrating data such records from multiple sources would allow properties to be aggregated to form more complete representations.
+Looking at overlap, we notice overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones that overlapped with any of the other records.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-speicifc IDs) others were useful properties one would expect to find in a record that were simply not present.  Only one of the music records, Spotify, included information about the album(s) that a song was featured on.  Such omissions show us that these data APIs reflect very specifically each service provider's capabilities and internal data representations, and that integrating data such records from multiple sources would allow properties to be aggregated to form more complete representations.
 
 The second finding is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modeled as a subtree in the other.  We also encountered, particularly in the Weather category, examples of fields which had data embedded in textual description fields 
 
