--- a/chi2012.tex
+++ b/chi2012.tex
@@ -247,7 +247,9 @@ Table \ref{tbl:prestudy2} displays the raw results of the process just described
 
 Looking at overlap, we notice overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these 'unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties one would expect to find in a record that were simply not present.  Only one of the music data providers, Spotify, included information about the album(s) that featured a particular song.  Such omissions show us that these data APIs reflect each service provider's own capabilities and internal data representations very specifically, and that integrating data such records from multiple sources could allow more complete and useful representations to be assembled.
 
-The second finding is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modeled as a subtree in the other.  We also encountered, particularly in the Weather category, examples of fields which had data embedded in textual description fields 
+The second finding is that equivalent properties were sometimes, though only rarely, given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modeled as a subtree in the other.  We also encountered, particularly in the Weather category, examples of fields which had data embedded in textual description fields, which hints their intended use in RSS and other feed readers than as stuctured data feeds.  
+
+Modelling
 
 %\section{Designing the DataPalette Interface}
 \section{Designing DataPalette : An Interface for Serendipitous Data Mixing}
